--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Applicant/List.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Applicant/List.cshtml
@@ -11,6 +11,26 @@
 
 <script>
     $(document).ready(function () {
+        $.extend($.fn.dataTable.defaults, {
+            searching: true
+        });
+        var table = $('#myTable').DataTable({
+            lengthChange: false,
+            "language": {
+                "lengthMenu": "Hiển thị _MENU_ yêu cầu mỗi trang",
+                "zeroRecords": "Không tìm thấy dữ liệu phù hợp",
+                "info": "Hiển thị trang _PAGE_ trên tổng số _PAGES_ trang",
+                "infoEmpty": "Không tìm thấy dữ liệu phù hợp",
+                "infoFiltered": "(tìm kiếm từ _MAX_ yêu cầu)",
+                "oPaginate": {
+                    "sNext": "Trang sau",
+                    "sPrevious": "Trang trước"
+                }
+            }
+
+        });
+
+
         $('input[type="checkbox"][name="userAccessNeeded"]').on('ifChecked', function (event) {
             $('input').iCheck('check');
 
@@ -101,10 +121,10 @@
         {
             <br />
             <div class="table-container">
-                <table class="table table-hover table-striped table-bordered table-advanced tablesorter">
+                <table id="myTable" class="table table-hover table-striped table-bordered table-advanced tablesorter">
                     <thead>
                         <tr>
-                            <th width="3%"><input type="checkbox" class="checkall" id="select-all" name="userAccessNeeded" /></th>
+                            @*<th width="3%"><input type="checkbox" class="checkall" id="select-all" name="userAccessNeeded" /></th>*@
                             <th width="15%" style="text-align:center">Tên ứng viên</th>
                             <th width="15%" style="text-align:center">Vị trí</th>
                             <th width="10%" style="text-align:center">Ngày nộp</th>
@@ -117,14 +137,14 @@
                         @foreach (var item in @Model)
                         {
                             <tr>
-                                <td><input type="checkbox" /></td>
+                                @*<td><input type="checkbox" /></td>*@
                                 <td><a href="#">@item.ApplicantName</a></td>
                                 <td>@item.ExpectedJob</td>
                                 <td>@item.AppliedDate.ToString("dd/MM/yyyy")</td>
                                 <td>
-                                    <div data-hover="tooltip" title="@item.MatchingPercent" class="progress progress-xs mbs">
-                                        <div role="progressbar" aria-valuenow="@item.MatchingPercent" aria-valuemin="0" aria-valuemax="100" style="width: @item.MatchingPercent%;" class="progress-bar progress-bar-green"><span class="sr-only">@item.MatchingPercent Complete</span></div>
-                                    </div>
+                                    <div role="progressbar" aria-valuenow="@item.MatchingPercent" aria-valuemin="0" aria-valuemax="100" style="width: @item.MatchingPercent%;" class="progress-bar progress-bar-green"><span class="sr-only">@item.MatchingPercent Complete</span>
+                                        @item.MatchingPercent %
+                                    </div>                                    
                                 </td>
                                 @if (item.Status == 0)
                                 {
@@ -166,36 +186,6 @@
                         }
                     </tbody>
                 </table>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="pagination-panel">
-                            Page
-                            &nbsp;<a href="#" class="btn btn-sm btn-default btn-prev"><i class="fa fa-angle-left"></i></a>&nbsp;<input type="text" maxlenght="5" value="1" class="pagination-panel-input form-control input-mini input-inline input-sm text-center">&nbsp;<a href="#" class="btn btn-sm btn-default btn-prev"><i class="fa fa-angle-right"></i></a>&nbsp;
-                            of 6 | View
-                            &nbsp;<select class="form-control input-xsmall input-sm input-inline">
-                                <option value="20" selected="selected">20</option>
-                                <option value="50">50</option>
-                                <option value="100">100</option>
-                                <option value="150">150</option>
-                                <option value="-1">All</option>
-                            </select>&nbsp;
-                            records | Found total @Model.Count() records
-                        </div>
-                    </div>
-                    <div class="col-lg-6 text-right">
-                        <div class="pagination-panel">
-                            <ul class="pagination pagination-sm man">
-                                <li><a href="#">«</a></li>
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                                <li><a href="#">»</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
             </div>
         }
     </div>
