--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Home/Index.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Home/Index.cshtml
@@ -582,7 +582,7 @@
                                 {
 
                                     <li class="list-group-item">
-                                        <a target="_blank" href="/Job/Detail/?jobID=@item.JobID" title="Job - Tuyển Gấp Lập Trình Viên .NET - CTC Communications">
+                                        <a target="_blank" href="/Job/Detail/?jobID=@item.JobID" >
                                             <div class="row">
                                                 <div class="col-md-9">                                                  
                                                     @if (item.isHightLight)
@@ -656,7 +656,7 @@
                                                          <strong>$@item.MinSalary.ToString().TrimEnd('0').TrimEnd(',')- $@item.MaxSalary.ToString().TrimEnd('0').TrimEnd(',')</strong><br />
                                                     }
                                                    
-                                                    <a href="#"> <img class="salesLogoImage img-responsive" src="@item.LogoURL" width="88" height="43" alt="Việc làm, tuyển dụng, tìm việc làm, viec lam - Viethung" title="Việc làm tại Viethung" border="0"></a>
+                                                    <a href="#"> <img class="salesLogoImage img-responsive" src="@item.LogoURL" width="88" height="43"  border="0"></a>
                                                 </div>
                                             </div>
 
