--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/AppliedJobList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/AppliedJobList.cshtml
@@ -57,9 +57,10 @@
                                 </td>
                               
                         <td>
-                            <a id="/Job/DeleteAppliedRequest?JobID=@item.JobID&&JobSeekerID=@item.JobSeekerID" href="#" class="label label-sm label-danger confirmation">
+
+                            <a id="/Job/DeleteAppliedRequest?JobID=@item.JobID&&JobSeekerID=@item.JobSeekerID" class="label label-sm label-danger confirmation">
                                 <i class="fa fa-times"></i>&nbsp;
-                                Xóa
+                              
                             </a></td>
                     </tr>
                         }
