--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/CompanyInfo/Update.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/CompanyInfo/Update.cshtml
@@ -10,9 +10,12 @@
         color: red;
     }
     .title {
-        font-size: large;
-        font-weight: 700;
+        font-size: medium;
+        font-weight: 600;
+        color: black;
     }
+
+
 </style>
 <link type="text/css" rel="stylesheet" href="~/Content/vendors/bootstrap-wysihtml5/bootstrap3-wysihtml5.min.css">
 
@@ -171,7 +174,7 @@
                                        <div class="col-md-12">
                                            <div class="form-group">
                                                <label for="description" class="control-label title">Giới thiệu công ty</label>
-                                               <div class="compose-editor mbl"><textarea id="message_content" rows="50" class="wysihtml5 form-control"></textarea></div>
+                                               <div class="compose-editor mbl"><textarea id="message_content" rows="20" class="wysihtml5 form-control"></textarea></div>
                                                @*<input type="hidden" id="messsage_content2" name="messageContent" />*@
                                                @Html.HiddenFor(m => m.description, new { @class = "form-control", row = 5, Id = "messsage_content2" })
                                                @Html.ValidationMessageFor(m => m.description, "", new { @class = "ErrorMessage" })
@@ -206,7 +209,7 @@
                                                 <div class="text-center mbl">
                                                     @*@Html.TextBoxFor(m => m.MyFile, new { id = "fu-my-simple-upload", type = "file" })*@
                                                     <input type="file" id="fileInput" name="MyFile">
-                                                    <a href="#" id="hl-start-upload" class="btn btn-green" style="margin-right: 90%;margin-top: 2%;">
+                                                    <a  id="hl-start-upload" class="btn btn-green" style="margin-right: 90%;margin-top: 2%;">
                                                         <i class="fa fa-upload"></i>&nbsp;
                                                         Tải lên
                                                     </a>
