--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/OwnList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Job/OwnList.cshtml
@@ -46,6 +46,96 @@
     });
 
 </script>
+<script>
+    function CheckJobPackage() {
+        //$('input[name=radioName]:checked', '#myForm').val()
+        var jobPackage = $('input[name=jobPackage]:checked').val();
+        var jobID = $('input[name=jobPackage]:checked').attr('id');
+        if (jobPackage == "Unlimited") {
+            $('input[name=jobID]').val(jobID);
+            $('#searchJobseeker').modal('show');
+        } else if(jobPackage == null){
+            swal("", "Vui lòng chọn công việc để tìm kiếm", "warning")
+        } else {
+            swal("", "Chỉ có công việc thuộc loại Unlimited mới có thể sử dụng chức năng này!", "error")
+        }
+    }
+    function EncapsuleData() {
+        var checkboxes = $(".icheckbox_minimal-grey").filter(".checked");
+        if (checkboxes.length == 0)
+        {
+            swal("", "Vui lòng chọn độ phù hợp để tìm kiếm", "warning")
+            return false;
+        } else {
+            return true;
+        }
+       
+    }
+</script>
+
+
+
+<div id="searchJobseeker" tabindex="-1" role="dialog" aria-labelledby="modal-wide-width-label" aria-hidden="true" class="modal fade">
+    <div class="modal-dialog modal-wide-width">
+        <div class="modal-content">
+            <div class="modal-header modal-header-primary">
+                <button type="button" data-dismiss="modal" aria-hidden="true" class="close">&times;</button>
+                <h4 id="modal-header-primary-label" class="modal-title">Tìm kiếm ứng viên phù hợp</h4>
+            </div>            
+            @using (Html.BeginForm("SearchJobseekerMatching", "Job", FormMethod.Post, new { onsubmit = "return EncapsuleData();" }))
+            {
+                <input type="hidden" id="jobMatching" name="jobID" />
+                <div class="modal-body">
+                    <div class="compose-mail">
+                        <div class="portlet box portlet-white">
+                            <h3 style="font-weight: 700; margin-left: 18px;">Lựa chọn độ phù hợp của ứng viên muốn tìm kiếm</h3>
+                            <br />
+
+                            <div class="row">
+
+                                <div class="col-md-3">
+                                    <div class="form-group">
+                                        <label for="inputAddress1" class="col-md-4 control-label"><input type="checkbox" name="percentMatching" value="1" /></label>
+
+                                        <div class="col-md-6">
+                                            <button type="button" class="btn btn-red btn-square" style="font-size: small">Độ phù hợp thấp 0%-29%</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3" style="width: 60%;margin-left: 100px;">
+                                    <div class="form-group">
+                                        <label for="inputAddress1" class="col-md-1 control-label"><input type="checkbox" name="percentMatching" value="2" /></label>
+
+                                        <div class="col-md-6">
+                                            <button type="button" class="btn btn-orange btn-square" style="font-size: small">Độ phù hợp trung bình 30%-69%</button>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-3" style=" margin-top: 2%;width: 50%;">
+                                    <div class="form-group">
+                                        <label for="inputAddress1" style="width: 15%;" class="col-md-3 control-label"><input type="checkbox" name="percentMatching" value="3" /></label>
+
+                                        <div class="col-md-6">
+                                            <button type="button" class="btn btn-success btn-square" style="font-size: small;width: 160%;">Độ phù hợp cao 70%-100%</button>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+
+
+                <div class="modal-footer">
+                    <button type="button" data-dismiss="modal" class="btn btn-default">Đóng</button>
+                    <button type="submit" onsubmit="EncapsuleData()" class="btn btn-green"><i class="fa fa-check"></i> Tìm kiếm</button>
+                </div>
+            }
+        </div>
+    </div>
+</div>
+
 
 <div id="ModalDisplayConfirm" tabindex="-1" role="dialog" aria-labelledby="modal-default-label" aria-hidden="false" class="modal fade in" style="display: none;">
     <div class="modal-dialog">
@@ -104,116 +194,94 @@
             <div class="col-sm-3 col-md-3" style="width:23%">
                 <a href="@Url.Action("Create","Job")" class="btn btn-blue btn-sm btn-block"><i class="fa fa-pencil"></i>&nbsp;Đăng việc làm mới</a>
             </div>
-        </div>
+            <div class="col-sm-3 col-md-3" style="width:23%">
+                <button onclick="CheckJobPackage()" type="button" class="btn btn-danger btn-sm btn-block"><i class="fa fa-search" style="margin-right:10px"></i>Tìm ứng viên</button>
+            </div>
         <div class="mtl mbl"></div>
-        <div class="row">
-            <div class="col-sm-12 col-md-12">
-                <div class="table-container">
+            <div class="row" >
+                <div class="col-sm-12 col-md-12" style="margin-top: 20px;">
+                    <div class="table-container">
 
-                    <table class="table table-hover table-striped table-bordered table-advanced tablesorter">
-                        <thead>
-                            <tr>
-                                <th width="7%"><input type="checkbox" class="checkall" id="select-all" name="userAccessNeeded" /></th>
-                                <th width="20%">Tiêu đề</th>
-                                <th width="10%">Ngày đăng</th>
-                                <th width="10%">Hết hạn</th>
-                                <th width="10%">Ứng viên</th>
-                                <th width="20%">Tình trạng</th>
-                                <th width="33%">Thao tác</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            @foreach (var item in @Model)
-                            {
+                        <table id="JSSTable" class="table table-hover table-striped table-bordered table-advanced tablesorter">
+                            <thead>
                                 <tr>
-                                    <td><input type="checkbox" /></td>
-                                    <td>
-                                        @item.JobTitle
-                                    </td>
-                                    <td>
-                                        @item.PostedDate.Value.ToString("dd/MM/yyyy")
-                                    </td>
-                                    <td>
-                                        @item.EndedDate.Value.ToString("dd/MM/yyyy")
-                                    </td>
-                                    <td>
-                                        @item.ApplicantCount
-                                    </td>
-                                    <td>
-                                        @if (item.IsPublic == true)
-                                        {
-                                            <span class="label label-success">Đang hiển thị</span>
-                                        }
-                                        else
-                                        {
-                                            <span class="label label-warning">Không hiển thị</span>
-                                        }
-                                        @if (DateTime.Now.CompareTo(item.EndedDate) > 0)
-                                        {
-                                            <span class="label label-danger">Quá hạn</span>
-                                        }
-                                    </td>
-                                    <td>
-                                        <a href="@Url.Action("Detail","Job",new { jobID = item.JobID })" class="btn btn-info" data-toggle="tooltip" title="Xem thông tin"><i class="fa fa-info-circle"></i></a>
-                                        @if (DateTime.Now.CompareTo(item.EndedDate) < 0)
-                                        {
-                                            <button type="button" class="btn btn-violet" data-toggle="tooltip" title="Chỉnh sửa"><i class="fa fa-edit"></i></button>
-
-                                            if (item.IsPublic == true)
+                                    <th width="7%"></th>
+                                    <th width="20%">Tiêu đề</th>
+                                    <th width="10%">Loại</th>
+                                    <th width="10%">Ngày đăng</th>
+                                    <th width="10%">Hết hạn</th>
+                                    <th width="5%">Ứng viên</th>
+                                    <th width="15%">Tình trạng</th>
+                                    <th width="33%">Thao tác</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                @foreach (var item in @Model)
+                                {
+                                    <tr>
+                                        <td><input id="@item.JobID" type="radio" name="jobPackage" value="@item.JobPackage" /></td>
+                                        <td>
+                                            @item.JobTitle
+                                        </td>
+                                        <td>
+                                            @item.JobPackage
+                                        </td>
+                                        <td>
+                                            @item.PostedDate.Value.ToString("dd/MM/yyyy")
+                                        </td>
+                                        <td>
+                                            @item.EndedDate.Value.ToString("dd/MM/yyyy")
+                                        </td>
+                                        <td>
+                                            @item.ApplicantCount
+                                        </td>
+                                        <td>
+                                            @if (item.IsPublic == true)
                                             {
-                                                <button type="button" data-target="#ModalHideConfirm" data-id="@item.JobID" data-toggle="modal" class="open-ModalHideConfirm btn btn-warning">
-                                                    <i class="fa fa-times"></i>
-                                                </button>
+                                                <span class="label label-success">Đang hiển thị</span>
                                             }
                                             else
                                             {
-                                                <button type="button" data-target="#ModalDisplayConfirm" data-id="@item.JobID" data-toggle="modal" class="open-ModalDisplayConfirm btn btn-success">
-                                                    <i class="fa fa-check"></i>
-                                                </button>
+                                                <span class="label label-warning">Không hiển thị</span>
                                             }
-                                            if (item.ApplicantCount > 0)
+                                            @if (DateTime.Now.CompareTo(item.EndedDate) > 0)
                                             {
-                                                <a href="@Url.Action("List","Applicant",new { id = item.JobID })" class="btn btn-blue" data-toggle="tooltip" title="Ứng viên"><i class="fa fa-male"></i></a>
+                                                <span class="label label-danger">Quá hạn</span>
                                             }
-                                        }
-                                    </td>
-                                </tr>
-                            }
-                        </tbody>
-                    </table>
-                    <div class="row">
-                        <div class="col-lg-6">
-                            <div class="pagination-panel" style="width:150%">
-                                Page
-                                &nbsp;<a href="#" class="btn btn-sm btn-default btn-prev"><i class="fa fa-angle-left"></i></a>&nbsp;<input type="text" maxlenght="5" value="1" class="pagination-panel-input form-control input-mini input-inline input-sm text-center">&nbsp;<a href="#" class="btn btn-sm btn-default btn-prev"><i class="fa fa-angle-right"></i></a>&nbsp;
-                                of 6 | View
-                                &nbsp;<select class="form-control input-xsmall input-sm input-inline">
-                                    <option value="20" selected="selected">20</option>
-                                    <option value="50">50</option>
-                                    <option value="100">100</option>
-                                    <option value="150">150</option>
-                                    <option value="-1">All</option>
-                                </select>&nbsp;
-                                records | Found total 58 records
-                            </div>
-                        </div>
-                        <div class="col-lg-6 text-right">
-                            <div class="pagination-panel">
-                                <ul class="pagination pagination-sm man">
-                                    <li><a href="#">«</a></li>
-                                    <li><a href="#">1</a></li>
-                                    <li><a href="#">2</a></li>
-                                    <li><a href="#">3</a></li>
-                                    <li><a href="#">4</a></li>
-                                    <li><a href="#">5</a></li>
-                                    <li><a href="#">»</a></li>
-                                </ul>
-                            </div>
+                                        </td>
+                                        <td>
+                                            <a href="@Url.Action("Detail","Job",new { jobID = item.JobID })" class="btn btn-info" data-toggle="tooltip" title="Xem thông tin"><i class="fa fa-info-circle"></i></a>
+                                            @if (DateTime.Now.CompareTo(item.EndedDate) < 0)
+                                            {
+                                                <button type="button" class="btn btn-violet" data-toggle="tooltip" title="Chỉnh sửa"><i class="fa fa-edit"></i></button>
+
+                                                if (item.IsPublic == true)
+                                                {
+                                                    <button type="button" data-target="#ModalHideConfirm" data-id="@item.JobID" data-toggle="modal" class="open-ModalHideConfirm btn btn-warning">
+                                                        <i class="fa fa-times"></i>
+                                                    </button>
+                                                }
+                                                else
+                                                {
+                                                    <button type="button" data-target="#ModalDisplayConfirm" data-id="@item.JobID" data-toggle="modal" class="open-ModalDisplayConfirm btn btn-success">
+                                                        <i class="fa fa-check"></i>
+                                                    </button>
+                                                }
+                                                if (item.ApplicantCount > 0)
+                                                {
+                                                    <a href="@Url.Action("List","Applicant",new { id = item.JobID })" class="btn btn-blue" data-toggle="tooltip" title="Ứng viên"><i class="fa fa-male"></i></a>
+                                                }
+                                            }
+                                        </td>
+                                    </tr>
+                                }
+                            </tbody>
+                        </table>
+                      
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
 
     </div>
 
