--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/OwnList.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/Topic/OwnList.cshtml
@@ -1,4 +1,5 @@
 ﻿@model JobSearchingSystem.Models.TopListViewModel
+@using System.Text.RegularExpressions
 
 @{
     ViewBag.Title = "OwnList";
@@ -15,17 +16,6 @@
     });
 </script>
 
-@foreach (var item in @Model.ListTopic)
-{
-    if (item.Topic_content != null)
-    {
-        <script>
-            $(document).ready(function () {
-            document.getElementById("text_@item.TopicID").innerHTML = window.unescape("@item.Topic_content")
-            });
-        </script>
-    }
-}
 
 <div id="ModalDeleteConfirm" tabindex="-1" role="dialog" aria-labelledby="modal-default-label" aria-hidden="false" class="modal fade in" style="display: none;">
     <div class="modal-dialog">
@@ -101,7 +91,14 @@
                                     <div class="col-md-8 blog-article">
                                         <h3><a href="@Url.Action("Detail", new { id = item.TopicID })">@item.Title</a></h3>
                                         <div id="text_@item.TopicID">
-                                            @item.Topic_content
+                                            @{string content = HttpUtility.UrlDecode(item.Topic_content);
+                                            string noHTML = Regex.Replace(content, @"<[^>]+>|&nbsp;", "").Trim();
+                                            string noHTMLNormalised = Regex.Replace(noHTML, @"\s{2,}", " ");
+                                            if (noHTMLNormalised.Length > 50)
+                                            {
+                                                noHTMLNormalised = noHTMLNormalised.Substring(0, 49) + " ....";
+                                            }}
+                                            @noHTMLNormalised
                                         </div>
                                         <a href="@Url.Action("Detail", new { id = item.TopicID })" class="btn btn-primary">
                                             Đọc thêm
