--- a/Source Code/JobSearchingSystem/JobSearchingSystem/Views/CommonList/Index.cshtml
+++ b/Source Code/JobSearchingSystem/JobSearchingSystem/Views/CommonList/Index.cshtml
@@ -5,11 +5,12 @@
     Layout = "~/Views/Shared/_LayoutFinal.cshtml";
 }
 
-<div class="page-content" style="padding: 20px 0px 20px 250px">
+<div class="page-content" style="padding: 20px 100px 20px 100px; background-color: #dedede; ">
     <div class="row">
         <div class="col-lg-9 panel panel-default">
             <h3 style="font-weight:600;text-align:center">Danh sách thành phố</h3>
             <a href="@Url.Action("CityList")" class="btn btn-grey btn-sm">
+                <i class="fa fa-list"></i>&nbsp;
                 Quản lý chi tiết
             </a>&nbsp;
             <br />
@@ -53,6 +54,7 @@
         <div class="col-lg-9 panel panel-default">
             <h3 style="font-weight:600;text-align:center">Danh sách nhóm ngành nghề</h3>
             <a href="@Url.Action("CategoryList")" class="btn btn-grey btn-sm">
+                <i class="fa fa-list"></i>&nbsp;
                 Quản lý chi tiết
             </a>&nbsp;
             <br />
@@ -101,6 +103,7 @@
         <div class="col-lg-9 panel panel-default">
             <h3 style="font-weight:600;text-align:center">Danh sách ngôn ngữ</h3>
             <a href="@Url.Action("LanguageList")" class="btn btn-grey btn-sm">
+                <i class="fa fa-list"></i>&nbsp;
                 Quản lý chi tiết
             </a>&nbsp;
             <br />
@@ -144,6 +147,7 @@
         <div class="col-lg-9 panel panel-default">
             <h3 style="font-weight:600;text-align:center">Danh sách cấp bậc</h3>
             <a href="@Url.Action("JobLevelList")" class="btn btn-grey btn-sm">
+                <i class="fa fa-list"></i>&nbsp;
                 Quản lý chi tiết
             </a>&nbsp;
             <br />
@@ -192,6 +196,7 @@
         <div class="col-lg-9 panel panel-default">
             <h3 style="font-weight:600;text-align:center">Danh sách bằng cấp</h3>
             <a href="@Url.Action("SchoolLevelList")" class="btn btn-grey btn-sm">
+                <i class="fa fa-list"></i>&nbsp;
                 Quản lý chi tiết
             </a>&nbsp;
             <br />
@@ -240,6 +245,7 @@
         <div class="col-lg-9 panel panel-default">
             <h3 style="font-weight:600;text-align:center">Danh sách trình độ ngôn ngữ</h3>
             <a href="@Url.Action("LevelList")" class="btn btn-grey btn-sm">
+                <i class="fa fa-list"></i>&nbsp;
                 Quản lý chi tiết
             </a>&nbsp;
             <br />
